--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -103,7 +103,7 @@
 							<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span>
 							</a>
 						</li>
-						<div class="container-fluid hide-more top-header more-equip-container" ng-class="{'visible-more': isMore}">
+						<div class="container hide-more top-header more-equip-container" ng-class="{'visible-more': isMore}">
 							<div class="row hidden-sm hidden-xs">
 								<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
 									<h3 class="heading-text">Aerial Lifts</h3>
@@ -271,21 +271,21 @@
 		</div>
 	</div>
 	<div class="container landing-top-content">
-		<div id="main" style="margin-top: 20%;">
+		<div id="main" style="margin-top: 10%;">
 			<h1 class="page-title white-color pull-center">Buy or Rent Equipments with us in Comfort !</h1>
 			<h2 class="page-description col-md-12 no-float white-color pull-center">We're bringing you a modern, comfortable and easy way	to rent, buy and sell equipments online.
 			</h2>
 		</div>
 		<div class="search-box-wrapper style2">
 			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12"></div>
-			<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12" style="margin-bottom: 20%;">
+			<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12" style="margin-bottom: 10%;">
 				<div class="search-box">
 					<form method="post">
 						<div class="row">
-							<div class="form-group col-lg-10 col-md-10 col-sm-10 col-xs-12">
+							<div class="form-group col-lg-10 col-md-9 col-sm-9 col-xs-12">
 								<angucomplete-alt placeholder="Equipment Name, Part Name, etc.." pause="400" selected-object="mdl.searchObj" remote-api-handler="mdl.searchHelper" remote-url-data-field="data" title-field="name" input-changed="mdl.inputChanged" input-class="input-text full-width"/>
 							</div>
-							<div class="form-group col-lg-2 col-md-2 col-sm-2 col-xs-12">
+							<div class="form-group col-lg-2 col-md-3 col-sm-3 col-xs-12">
 								<button type="submit" class="full-width btn all-btn search-button" ng-click="mdl.search()">Search Now</button>
 							</div>
 						</div>
@@ -297,7 +297,7 @@
 	</div>
 </section>
 <section class="no-padding gray-area">
-	<div class="container section">
+	<div class="container section landing-section">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
 				<h2 class="landing-headings">Browse Equipments from our list</h2>
@@ -307,7 +307,7 @@
 		<div class="row image-box style10 browse-equip-row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col">
-					<article class="box">
+					<article class="box pointerhover landing-browse">
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="hotel-list-view.html" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt="" width="270" height="160" /></a>
 						</figure>
@@ -317,7 +317,7 @@
 					</article>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col">
-					<article class="box">
+					<article class="box pointerhover landing-browse">
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="hotel-list-view.html" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt="" width="270" height="160" /></a>
 						</figure>
@@ -327,7 +327,7 @@
 					</article>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col">
-					<article class="box">
+					<article class="box pointerhover landing-browse">
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="hotel-list-view.html" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt="" width="270" height="160" /></a>
 						</figure>
@@ -337,7 +337,7 @@
 					</article>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col">
-					<article class="box">
+					<article class="box pointerhover landing-browse">
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="hotel-list-view.html" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt="" width="270" height="160" /></a>
 						</figure>
@@ -349,43 +349,43 @@
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
 				<div class="col-lf-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col">
-					<article class="box">
+					<article class="box pointerhover landing-
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="hotel-list-view.html" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt="" width="270" height="160" /></a>
 						</figure>
 						<div class="details">
 							<h4 class="box-title">Aerial Lifts</h4>
-						</div>
+						</div">>browse
 					</article>
 				</div>
 				<div class="col-lf-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col">
-					<article class="box">
+					<article class="box pointerhover landing-
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="hotel-list-view.html" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt="" width="270" height="160" /></a>
 						</figure>
 						<div class="details">
 							<h4 class="box-title">Earth Moving</h4>
-						</div>
+						</div">>browse
 					</article>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col">
-					<article class="box">
+					<article class="box pointerhover landing-
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="hotel-list-view.html" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt="" width="270" height="160" /></a>
 						</figure>
 						<div class="details">
 							<h4 class="box-title">Forklifts & Material Handling</h4>
-						</div>
+						</div">>browse
 					</article>
 				</div>
 				<div class="col-lf-3 col-md-3 col-sm-3 col-xs-12 col-padding-small browse-equip-col">
-					<article class="box">
+					<article class="box pointerhover landing-
 						<figure class="animated fadeInDown" data-animation-type="fadeInDown" data-animation-duration="1">
 							<a href="hotel-list-view.html" title="" class="hover-effect"><img src="http://placehold.it/270x160" alt="" width="270" height="160" /></a>
 						</figure>
 						<div class="details">
 							<h4 class="box-title">Concrete & Masonry</h4>
-						</div>
+						</div">>browse
 					</article>
 				</div>
 			</div>
@@ -393,7 +393,7 @@
 	</div>
 </section>
 <section class="features-section hidden-sm hidden-xs">
-	<div class="section">
+	<div class="section landing-section">
 		<div class="container description text-center">
 			<div class="pull-center">
 				<h2 class="landing-headings">Our Features</h2>
@@ -534,7 +534,7 @@
 	</div>
 </section> -->
 <section class="visible-xs">
-	<div class="container section">
+	<div class="container section landing-section">
 		<div class="row">
 			<div class="col-lg-12 col-md-12">
 				<div class="pull-center">
@@ -677,7 +677,7 @@
 		</div>
 </section>
 <section class="hidden-xs">
-	<div class="container section">
+	<div class="container section landing-section">
 		<div class="row">
 			<div class="col-lg-12 col-md-12">
 				<div class="pull-center">
@@ -1116,7 +1116,7 @@
 		</div> -->
 </section>
 <section class="gray-area">
-	<div class="container section">
+	<div class="container section landing-section">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 feedback-heading">
 				<div class="pull-center">
