--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -215,7 +215,7 @@
 								<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span>
 								</a>
 							</li>
-							<div class="container-fluid hide-more top-header more-equip-container" ng-class="{'visible-more': isMore}">
+							<div class="container hide-more top-header more-equip-container" ng-class="{'visible-more': isMore}">
 								<div class="row hidden-sm hidden-xs">
 									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-center white-color more-equip-col">
 										<h3 class="heading-text">Aerial Lifts</h3>
