--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -154,20 +154,21 @@ img.full-width { height: auto; }
 }
 
 .all-btn {
-  // height: 34px;
-  // font-size: 13px;
-  // transition: all 0.6s ease;
-  // min-width: 100px;
-  // font-weight: 400;
-  // border-radius: 4px;
+  height: 34px;
+  font-size: 13px;
+  transition: all 0.6s ease;
+  min-width: 100px;
+  font-weight: 400;
+  border-radius: 3px;
   text-transform: none;
-  transition: background-color 0.23s ease-in-out 0s;
-	padding: 0 18px;
-	border-radius: 3px;
-	font-size: 14px;
-	border: 0 none;
-	height: 34px;
-	line-height: 32px;
+ //  transition: background-color 0.23s ease-in-out 0s;
+	// padding: 0 18px;
+	// border-radius: 3px;
+	// font-size: 14px;
+	// border: 0 none;
+	// height: 34px;
+	// line-height: 32px;
+	// width: auto;
   &:hover {
     color: #fff;
     background-color: #BF6E1F;
