--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -1,21 +1,26 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 breadcrumb-col">
-  <a ui-sref="home">Home /</a>
-  <span>My Buyer Dashboard</span>
+	<a ui-sref="home">Home /</a>
+	<span>My Buyer Dashboard</span>
 </div>
 <div class="tab-container full-width-style arrow-left dashboard">
-    <ul class="tabs">
-        <li ui-sref-active="active" ui-sref="main.account.dashboard"  ><a><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
-        <li active-state="main.account.orders" ui-sref="main.account.orders.list"  ><a><i class="soap-icon-bag circle"></i>Orders</a></li>
-        <li active-state="main.account.favorites" ui-sref="main.account.favorites"><a><i class="soap-icon-businessbag circle"></i>Favorites</a></li>
-        <li active-state="main.account.invoices" ui-sref="main.account.invoices.list"  ><a><i class="soap-icon-card circle"></i>Invoices</a></li>
-        <li active-state="main.account.inquiries" ui-sref="main.account.inquiries.list"><a><i class="soap-icon-card circle"></i>Enquiry</a></li>
-        <li active-state="main.account.jobsites"   ui-sref="main.account.jobsites.list"  ><a><i class="soap-icon-departure circle"></i>Jobsites</a></li>
-        <!-- <li active-state="main.account.profile"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li> -->
-        <!-- <li active-state="main.account.equipments" ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Equipments</a></li> -->
-       <!--  <li active-state="main.account.inventory" ui-sref="main.account.inventory.list"  ><a><i class="soap-icon-list circle"></i>Inventory</a></li> -->
-        <!-- <li><a><i class="soap-icon-settings circle"></i>Rent Orders</a></li> -->
-    </ul>
-    <div class="tab-content">
-        <ui-view/>
+	<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 no-padding">
+    <div class="visible-xs">
+      <i class="fa fa-bars dashboard-button hotel-color" ng-click="dashboard()"></i>
     </div>
+		<ul class="tabs hide-mobile" ng-class="{'visible-xs': isShow}">
+			<li ui-sref-active="active" ui-sref="main.account.dashboard" ng-click="closeDashboard()"><a><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
+			<li active-state="main.account.orders" ui-sref="main.account.orders.list" ng-click="closeDashboard()"><a><i class="soap-icon-bag circle"></i>Orders</a></li>
+			<li active-state="main.account.favorites" ui-sref="main.account.favorites" ng-click="closeDashboard()"><a><i class="soap-icon-businessbag circle"></i>Favorites</a></li>
+			<li active-state="main.account.invoices" ui-sref="main.account.invoices.list" ng-click="closeDashboard()"><a><i class="soap-icon-card circle"></i>Invoices</a></li>
+			<li active-state="main.account.inquiries" ui-sref="main.account.inquiries.list" ng-click="closeDashboard()"><a><i class="soap-icon-card circle"></i>Enquiry</a></li>
+			<li active-state="main.account.jobsites"   ui-sref="main.account.jobsites.list" ng-click="closeDashboard()"><a><i class="soap-icon-departure circle"></i>Jobsites</a></li>
+			<!-- <li active-state="main.account.profile"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li> -->
+			<!-- <li active-state="main.account.equipments" ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Equipments</a></li> -->
+			<!--  <li active-state="main.account.inventory" ui-sref="main.account.inventory.list"  ><a><i class="soap-icon-list circle"></i>Inventory</a></li> -->
+			<!-- <li><a><i class="soap-icon-settings circle"></i>Rent Orders</a></li> -->
+		</ul>
+	</div>
+	<div class="tab-content col-lg-10 col-md-10 col-sm-10 col-xs-12">
+    <ui-view/>
+  </div>
 </div>
