header fixed on scroll

--- a/src/app/style/sass/responsive.scss
+++ b/src/app/style/sass/responsive.scss
@@ -795,6 +795,15 @@
       float: left !important;
     }
   }
+  .landing-browse-equip {
+    .hover-effect {
+      &:hover {
+        &:after {
+          background: none
+        }
+      }
+    }
+  }
 }
 
 /* 8. Styles for devices(<=480px ) */
