--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -6274,3 +6274,10 @@ section {
     outline: none;
   }
 }
+
+.header-on-scroll {
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  top: 0;
+}
