--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -49,7 +49,7 @@
 									<a href="" ng-click="logout()" title="signout">Signout</a>
 								</li>
 							</div>
-							<li class="dropdown hidden-xs" ng-if="isLoggedIn()">
+							<li class="dropdown hidden-xs landing-dropdown" ng-if="isLoggedIn()">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 									<img src="/assets/images/avtar.png">&nbsp
 									Account <span class="caret"></span>
@@ -100,7 +100,7 @@
 							<li class="not-user">
 								<a class="soap-popupbox pointerhover">Concrete & Mason</a>
 							</li>
-							<li class="dropdown" ng-click="moreEquipments()">
+							<li class="dropdown landing-dropdown" ng-click="moreEquipments()">
 								<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span>
 								</a>
 							</li>
