buyer dashboard buyer orders page

--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -161,7 +161,7 @@
 										<a href="" ng-click="logout()" title="signout">Signout</a>
 									</li>
 								</div>
-								<li class="dropdown hidden-xs" ng-if="isLoggedIn()">
+								<li class="dropdown hidden-xs landing-dropdown" ng-if="isLoggedIn()">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 										<img src="/assets/images/avtar.png">&nbsp
 										Account <span class="caret"></span>
