--- a/src/app/views/seller-account/dashboard/dashboard.html
+++ b/src/app/views/seller-account/dashboard/dashboard.html
@@ -4,7 +4,7 @@
 	<br />
 	<div class="row block">
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-			<a>
+			<a class="pointerhover">
 				<div class="fact blue">
 					<div class="numbers counters-box">
 						<dl>
@@ -38,7 +38,7 @@
 			</a>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-			<a>
+			<a class="pointerhover">
 				<div class="fact red">
 					<div class="numbers counters-box">
 						<dl>
@@ -55,7 +55,7 @@
 			</a>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-			<a >
+			<a class="pointerhover">
 				<div class="fact green">
 					<div class="numbers counters-box">
 						<dl>
