--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -1,202 +1,199 @@
-<div id="dashboard" class="tab-pane fade in active">
-<h1 class="no-margin skin-color">Hi {{ user.fullname }}, Welcome to your Buyer Dashboard!</h1>
-<p>All your bookings with us will appear here and you’ll be able to manage everything!</p>
-<br />
-<div class="row block">
-		<div class="col-sm-6 col-md-3">
-				<a>
-						<div class="fact blue">
-								<div class="numbers counters-box">
-										<dl>
-												<dt class="display-counter" data-value="3200">0</dt>
-												<dd>Rented</dd>
-										</dl>
-										<i class="icon soap-icon-calendar-check"></i>
-								</div>
-								<div class="description">
-										<i class="icon soap-icon-longarrow-right"></i>
-										<span>View History</span>
-								</div>
-						</div>
-				</a>
+<div id="dashboard" class="tab-pane fade in active col-padding-small col-padding-sm">
+	<h1 class="no-margin skin-color seller-heading-font">Hi {{ user.fullname }}, Welcome to your Buyer Dashboard!</h1>
+	<p>All your seller profile and setting will appear here and you'll be able to manage everything!</p>
+	<br />
+	<div class="row block">
+		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+			<a class="pointerhover">
+				<div class="fact blue">
+					<div class="numbers counters-box">
+						<dl>
+							<dt class="display-counter" data-value="3200">0</dt>
+							<dd>Rented</dd>
+						</dl>
+						<i class="icon soap-icon-calendar-check"></i>
+					</div>
+					<div class="description">
+						<i class="icon soap-icon-longarrow-right"></i>
+						<span>View History</span>
+					</div>
+				</div>
+			</a>
 		</div>
-		<div class="col-sm-6 col-md-3">
-				<a ui-sref="main.account.jobsites.list" >
-						<div class="fact yellow">
-								<div class="numbers counters-box">
-										<dl>
-												<dt class="display-counter" data-value="4509">{{mdl.jobSitesCount}}</dt>
-												<dd>Your Jobsites</dd>
-										</dl>
-										<i class="icon soap-icon-departure"></i>
-								</div>
-								<div class="description">
-										<i class="icon soap-icon-longarrow-right"></i>
-										<span>Manage Jobsites</span>
-								</div>
-						</div>
-				</a>
+		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+			<a ui-sref="main.account.jobsites.list" >
+				<div class="fact yellow">
+					<div class="numbers counters-box">
+						<dl>
+							<dt class="display-counter" data-value="4509">{{mdl.jobSitesCount}}</dt>
+							<dd>Your Jobsites</dd>
+						</dl>
+						<i class="icon soap-icon-departure"></i>
+					</div>
+					<div class="description">
+						<i class="icon soap-icon-longarrow-right"></i>
+						<span>Manage Jobsites</span>
+					</div>
+				</div>
+			</a>
 		</div>
-		<div class="col-sm-6 col-md-3">
-				<a >
-						<div class="fact red">
-								<div class="numbers counters-box">
-										<dl>
-												<dt class="display-counter" data-value="3250">{{mdl.favoriteCount || 0}}</dt>
-												<dd>Favourited</dd>
-										</dl>
-										<i class="icon soap-icon-wishlist"></i>
-								</div>
-								<div class="description">
-										<i class="icon soap-icon-longarrow-right"></i>
-										<span>View Favourited</span>
-								</div>
-						</div>
-				</a>
+		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+			<a ui-sref="main.account.favorites">
+				<div class="fact red">
+					<div class="numbers counters-box">
+						<dl>
+							<dt class="display-counter" data-value="3250">{{mdl.favoriteCount || 0}}</dt>
+							<dd>Favourited</dd>
+						</dl>
+						<i class="icon soap-icon-wishlist"></i>
+					</div>
+					<div class="description">
+						<i class="icon soap-icon-longarrow-right"></i>
+						<span>View Favourited</span>
+					</div>
+				</div>
+			</a>
 		</div>
-		<div class="col-sm-6 col-md-3">
-				<a >
-						<div class="fact green">
-								<div class="numbers counters-box">
-										<dl>
-												<dt class="display-counter" data-value="1570">0</dt>
-												<dd>Service Tickets</dd>
-										</dl>
-										<i class="icon soap-icon-stories"></i>
-								</div>
-								<div class="description">
-										<i class="icon soap-icon-longarrow-right"></i>
-										<span>Manage Requests</span>
-								</div>
-						</div>
-				</a>
+		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+			<a class="pointerhover">
+				<div class="fact green">
+					<div class="numbers counters-box">
+						<dl>
+							<dt class="display-counter" data-value="1570">0</dt>
+							<dd>Service Tickets</dd>
+						</dl>
+						<i class="icon soap-icon-stories"></i>
+					</div>
+					<div class="description">
+						<i class="icon soap-icon-longarrow-right"></i>
+						<span>Manage Requests</span>
+					</div>
+				</div>
+			</a>
 		</div>
-</div>
-<!--<div class="notification-area">
-		<div class="info-box block">
-				<span class="close"></span>
-				<p>This is your Dashboard, the place to check your Profile, respond to Reservation Requests, view upcoming Reservations, and much more.</p>
-				<br />
-				<ul class="circle">
-						<li><span class="skin-color">Learn How It Works</span> — Watch a short video that shows you how Maerketplace works.</li>
-						<li><span class="skin-color">Get Help</span> — View our help section and FAQs to get started on Marketplace. </li>
-				</ul>
-		</div>
-</div>-->
-
-<div class="row block">
-		<div class="col-md-6 notifications">
-				<h2>Notifications</h2>
-				<a  >
-						<div class="icon-box style1 fourty-space">
-								<i class="soap-icon-status takeoff-effect yellow-bg"></i>
-								<span class="time pull-right">JUST NOW</span>
-								<p class="box-title">Payment Made <span class="price">$120</span></p>
-						</div>
-				</a>
-				<a  >
-						<div class="icon-box style1 fourty-space">
-								<i class="soap-icon-status blue-bg"></i>
-								<span class="time pull-right">10 Mins ago</span>
-								<p class="box-title">Payment Due <span class="price">$247</span></p>
-						</div>
-				</a>
-				<a  >
-						<div class="icon-box style1 fourty-space">
-								<i class="soap-icon-baggage-5 red-bg"></i>
-								<span class="time pull-right">39 Mins ago</span>
-								<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
-						</div>
-				</a>
-				<a  >
-						<div class="icon-box style1 fourty-space">
-								<i class="soap-icon-status takeoff-effect yellow-bg"></i>
-								<span class="time pull-right">JUST NOW</span>
-								<p class="box-title">Payment Made <span class="price">$120</span></p>
-						</div>
-				</a>
-				<a  >
-						<div class="icon-box style1 fourty-space">
-								<i class="soap-icon-status blue-bg"></i>
-								<span class="time pull-right">10 Mins ago</span>
-								<p class="box-title">Payment Due <span class="price">$247</span></p>
-						</div>
-				</a>
-				<a  >
-						<div class="icon-box style1 fourty-space">
-								<i class="soap-icon-baggage-5 red-bg"></i>
-								<span class="time pull-right">39 Mins ago</span>
-								<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
-						</div>
-				</a>
-
-
-				<a  >
-						<div class="load-more">. . . . . . . . . . . . . </div>
-				</a>
-		</div>
-		<div class="col-md-6">
-				<h2>Upcoming Equipments Bookings</h2>
+	</div>
+	<!--<div class="notification-area">
+			<div class="info-box block">
+					<span class="close"></span>
+					<p>This is your Dashboard, the place to check your Profile, respond to Reservation Requests, view upcoming Reservations, and much more.</p>
+					<br />
+					<ul class="circle">
+							<li><span class="skin-color">Learn How It Works</span> — Watch a short video that shows you how Maerketplace works.</li>
+							<li><span class="skin-color">Get Help</span> — View our help section and FAQs to get started on Marketplace. </li>
+					</ul>
+			</div>
+	</div>-->
+	<div class="row block">
+		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<h2 class="heading-text">Upcoming Equipments Bookings</h2>
 				<div class="recent-activity">
-						<ul>
-								<li>
-										<a  >
-												<i class="icon soap-icon-shopping-2 circle takeoff-effect yellow-color"></i>
-												<span class="price"><small>You paid</small>$120</span>
-												<h4 class="box-title">
-														Caterpillar Pickup Crane<small>in 2 days</small>
-												</h4>
-										</a>
-								</li>
-								<li>
-										<a  >
-												<i class="icon soap-icon-shopping-2 circle red-color"></i>
-												<span class="price"><small>per day</small>$45.39</span>
-												<h4 class="box-title">
-														Caterpillar Pickup Crane<small>in 2 days</small>
-												</h4>
-										</a>
-								</li>
-								<li>
-										<a  >
-												<i class="icon soap-icon-shopping-2 circle green-color"></i>
-												<span class="price"><small>from</small>$578</span>
-												<h4 class="box-title">
-														Caterpillar Pickup Crane<small>in 2 days</small>
-												</h4>
-										</a>
-								</li>
-								<li>
-										<a  >
-												<i class="icon soap-icon-shopping-2 circle blue-color"></i>
-												<span class="price"><small>Avg/night</small>$620</span>
-												<h4 class="box-title">
-														Caterpillar Pickup Crane<small>in 2 days</small>
-												</h4>
-										</a>
-								</li>
-								<li>
-										<a  >
-												<i class="icon soap-icon-shopping-2 circle red-color"></i>
-												<span class="price"><small>per day</small>$45.39</span>
-												<h4 class="box-title">
-														Caterpillar Pickup Crane<small>in 2 days</small>
-												</h4>
-										</a>
-								</li>
-								<li>
-										<a  >
-												<i class="icon soap-icon-shopping-2 circle green-color"></i>
-												<span class="price"><small>from</small>$578</span>
-												<h4 class="box-title">
-														Caterpillar Pickup Crane<small>in 2 days</small>
-												</h4>
-										</a>
-								</li>
-						</ul>
-						<a   class="button green full-width">VIEW ALL BOOKINGS</a>
+					<ul>
+						<li>
+							<a>
+								<i class="icon soap-icon-shopping-2 circle takeoff-effect yellow-color"></i>
+								<span class="price"><small>You paid</small>$120</span>
+								<h4 class="box-title">
+									Caterpillar Pickup Crane<small>in 2 days</small>
+								</h4>
+							</a>
+						</li>
+						<li>
+							<a>
+								<i class="icon soap-icon-shopping-2 circle red-color"></i>
+								<span class="price"><small>per day</small>$45.39</span>
+								<h4 class="box-title">
+									Caterpillar Pickup Crane<small>in 2 days</small>
+								</h4>
+							</a>
+						</li>
+						<li>
+							<a>
+								<i class="icon soap-icon-shopping-2 circle green-color"></i>
+								<span class="price"><small>from</small>$578</span>
+								<h4 class="box-title">
+									Caterpillar Pickup Crane<small>in 2 days</small>
+								</h4>
+							</a>
+						</li>
+						<li>
+							<a>
+								<i class="icon soap-icon-shopping-2 circle blue-color"></i>
+								<span class="price"><small>Avg/night</small>$620</span>
+								<h4 class="box-title">
+									Caterpillar Pickup Crane<small>in 2 days</small>
+								</h4>
+							</a>
+						</li>
+						<li>
+							<a>
+								<i class="icon soap-icon-shopping-2 circle red-color"></i>
+								<span class="price"><small>per day</small>$45.39</span>
+								<h4 class="box-title">
+									Caterpillar Pickup Crane<small>in 2 days</small>
+								</h4>
+							</a>
+						</li>
+						<li>
+							<a>
+								<i class="icon soap-icon-shopping-2 circle green-color"></i>
+								<span class="price"><small>from</small>$578</span>
+								<h4 class="box-title">
+									Caterpillar Pickup Crane<small>in 2 days</small>
+								</h4>
+							</a>
+						</li>
+					</ul>
+					<a class="button green full-width">VIEW ALL BOOKINGS</a>
 				</div>
 		</div>
-</div>
-<hr>
+		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 seller-dash-noti notifications">
+			<h2 class="heading-text">Notifications</h2>
+			<a>
+				<div class="icon-box style1 fourty-space">
+					<i class="soap-icon-status takeoff-effect yellow-bg"></i>
+					<span class="time pull-right">JUST NOW</span>
+					<p class="box-title">Payment Made <span class="price">$120</span></p>
+				</div>
+			</a>
+			<a>
+				<div class="icon-box style1 fourty-space">
+					<i class="soap-icon-status blue-bg"></i>
+					<span class="time pull-right">10 Mins ago</span>
+					<p class="box-title">Payment Due <span class="price">$247</span></p>
+				</div>
+			</a>
+			<a>
+				<div class="icon-box style1 fourty-space">
+					<i class="soap-icon-baggage-5 red-bg"></i>
+					<span class="time pull-right">39 Mins ago</span>
+					<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
+				</div>
+			</a>
+			<a>
+				<div class="icon-box style1 fourty-space">
+					<i class="soap-icon-status takeoff-effect yellow-bg"></i>
+					<span class="time pull-right">JUST NOW</span>
+					<p class="box-title">Payment Made <span class="price">$120</span></p>
+				</div>
+			</a>
+			<a>
+				<div class="icon-box style1 fourty-space">
+					<i class="soap-icon-status blue-bg"></i>
+					<span class="time pull-right">10 Mins ago</span>
+					<p class="box-title">Payment Due <span class="price">$247</span></p>
+				</div>
+			</a>
+			<a>
+				<div class="icon-box style1 fourty-space">
+					<i class="soap-icon-baggage-5 red-bg"></i>
+					<span class="time pull-right">39 Mins ago</span>
+					<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
+				</div>
+			</a>
+			<a>
+				<div class="load-more">. . . . . . . . . . . . . </div>
+			</a>
+		</div>
+	</div>
+	<hr>
 </div>
