--- a/src/app/views/account/orders/list/list.html
+++ b/src/app/views/account/orders/list/list.html
@@ -1,31 +1,28 @@
 
-<h2>My Orders</h2>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
+	<h1 class="no-margin skin-color seller-heading-font">My Orders</h1>
+</div>
 
-<div class="booking-history">
-
-    <div ng-repeat="order in mdl.orders" class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : {{order.id}}</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>{{order.items.length}} items
-        </h4>
-        <!--<h4 class="box-title col-lg-offset-1">
-            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>-->
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>${{order.total | number}}
-        </h4>
-
-        <!-- <button class="btn all-btn status primary-btn" ui-sref="main.account.orders.view({id:order.id})">Details</button>
-        <button class="btn all-btn status primary-btn" ui-sref="main.account.orders.list">Cancel</button>
-        <button class="btn all-btn status primary-btn" ui-sref="main.account.orders.list">Return</button> -->
-        <a ui-sref="main.account.orders.view({id:order.id})" class="pull-right">
-            <i class="fa fa-eye" ui-sref="main.account.orders.view({id:order.id})"></i>
-        </a>
-    </div>
-
-
-
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
+	<div ng-repeat="order in mdl.orders" class="booking-info clearfix">
+		<h4 class="box-title">
+			<i class="icon soap-icon-card yellow-color circle"></i>Order
+			<small>ID : {{order.id}}</small>
+		</h4>
+		<h4 class="box-title col-lg-offset-1">
+			<i class="icon yellow-color circle"></i>{{order.items.length}} items
+		</h4>
+		<!--<h4 class="box-title col-lg-offset-1">
+			<i class="icon soap-icon-departure yellow-color"></i>City,state,California
+		</h4>-->
+		<h4 class="box-title col-lg-offset-1">
+			<i class="icon yellow-color circle"></i>${{order.total | number}}
+		</h4>
+		<!-- <button class="btn all-btn status primary-btn" ui-sref="main.account.orders.view({id:order.id})">Details</button>
+		<button class="btn all-btn status primary-btn" ui-sref="main.account.orders.list">Cancel</button>
+		<button class="btn all-btn status primary-btn" ui-sref="main.account.orders.list">Return</button> -->
+		<a ui-sref="main.account.orders.view({id:order.id})" class="pull-right">
+			<i class="fa fa-eye" ui-sref="main.account.orders.view({id:order.id})"></i>
+		</a>
+	</div>
 </div>
